# MarqueePlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/uranus/marqueeplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  marquee_jni.cpp  marquee_jni.h  native-lib.cpp
app/src/main/cpp/marquee_player/: cmdutils.h  ff_cmdutils.c  ff_cmdutils.h  ff_player.cpp  ff_player.h  ffplay.md  marquee_jni.cpp  marquee_log.cpp  marquee_log.h  marquee_player.cpp  marquee_player.h  pipeline.cpp  pipeline.h
app/src/main/cpp/marquee_player/sdl/: marquee_sdl.cpp  marquee_sdl.h  sdl_audiospec.cpp  sdl_audiospec.h  sdl_mutex.cpp  sdl_mutex.h  sdl_thread.cpp  sdl_thread.h
app/src/main/cpp/marquee_player/system/: android_audiotrack.cpp  android_audiotrack.h
app/src/main/cpp/simple_gme/: CMakeLists.txt  op.cpp
app/src/main/cpp/socket/: server_ss.c
app/src/main/doc/: Choreographer.md
app/src/main/java/com/uranus/marqueeplayer/: MainActivity.kt
app/src/main/java/com/uranus/marqueeplayer/camera/: CameraSurfaceProvider.kt  CameraUtils.kt  CameraView.kt  Logger.kt  ScreenFilter.kt
app/src/main/java/com/uranus/marqueeplayer/core/: MarqueePlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/uranus/marqueeplayer/: ExampleUnitTest.kt
doc/: Bitmap.md
gradle/wrapper/: gradle-wrapper.properties
script/: address2line.sh
